manifests/deployment-frontend.yml
# Copyright 2019 (c) Sayonika Project Authors. All Rights Reserved.
# Licensed under MIT. You should have recieved a copy of the license on the project root.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: claritymoe/sayonika-frontend:latest
        ports:
        - containerPort: 8080
