manifests/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: app-backend-internal
  labels:
    app: app-backend
    tier: backend
spec:
  ports:
  - port: 4444
    targetPort: 4444
  selector:
    app: app-backend
    tier: backend
