manifests/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
  labels:
    app: app-frontend
    tier: frontend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: app-frontend
    tier: frontend
