manifests/service-statefulset-postgres.yml
# Copyright 2019 (c) Sayonika Project Authors. All Rights Reserved.
# Licensed under MIT. You should have recieved a copy of the license on the project root.

apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster
  labels:
    app: postgres-cluster
    tier: backend
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-cluster
    tier: backend
