manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sayonika.local
    http:
      paths:
      - path: /
        backend:
          serviceName: app-frontend
          servicePort: 8080
